--- a/Faveo Helpdesk Pro/Base.lproj/Main.storyboard
+++ b/Faveo Helpdesk Pro/Base.lproj/Main.storyboard
@@ -2591,7 +2591,7 @@
                                 <rect key="frame" x="7" y="329" width="394" height="159"/>
                                 <subviews>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="e.g http://faveohelpdesk.com/support" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="w0x-e5-ocS">
-                                        <rect key="frame" x="32" y="32" width="356" height="30"/>
+                                        <rect key="frame" x="30" y="32" width="344" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="kcP-db-QUj"/>
                                         </constraints>
@@ -2599,14 +2599,14 @@
                                         <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="URL" returnKeyType="done"/>
                                     </textField>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1FH-kv-dGW">
-                                        <rect key="frame" x="18" y="61" width="352" height="1"/>
+                                        <rect key="frame" x="15" y="61" width="353" height="1"/>
                                         <color key="backgroundColor" red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="1" id="BA2-4G-h55"/>
                                         </constraints>
                                     </view>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Helpdesk URL" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NvZ-jN-SUK">
-                                        <rect key="frame" x="21" y="8" width="80" height="25"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="COMPANY'S URL" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NvZ-jN-SUK">
+                                        <rect key="frame" x="21" y="8" width="98" height="25"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="25" id="Q1E-N6-ck2"/>
                                         </constraints>
@@ -2615,19 +2615,19 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="url1" translatesAutoresizingMaskIntoConstraints="NO" id="85B-ve-Top">
-                                        <rect key="frame" x="5" y="33" width="27" height="27"/>
+                                        <rect key="frame" x="2" y="33" width="27" height="27"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="27" id="Gq5-y1-g4Z"/>
                                             <constraint firstAttribute="width" constant="27" id="nSI-vt-Sep"/>
                                         </constraints>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f7I-ge-YNy">
-                                        <rect key="frame" x="219" y="80" width="45" height="40"/>
+                                        <rect key="frame" x="363" y="28" width="42" height="40"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="45" id="4iR-hf-vMH"/>
+                                            <constraint firstAttribute="width" constant="42" id="4iR-hf-vMH"/>
                                             <constraint firstAttribute="height" constant="40" id="krX-36-BEt"/>
                                         </constraints>
-                                        <state key="normal" image="next1"/>
+                                        <state key="normal" image="ic_forward"/>
                                         <connections>
                                             <action selector="urlButton:" destination="99b-SL-Zyv" eventType="touchUpInside" id="TZU-XP-JIH"/>
                                         </connections>
@@ -2637,19 +2637,19 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="159" id="G82-aw-4x1"/>
                                     <constraint firstItem="NvZ-jN-SUK" firstAttribute="top" secondItem="BFl-VH-PD8" secondAttribute="top" constant="8" id="Of8-cq-R1f"/>
-                                    <constraint firstAttribute="bottom" secondItem="f7I-ge-YNy" secondAttribute="bottom" constant="39" id="PeA-Ac-7cu"/>
+                                    <constraint firstAttribute="bottom" secondItem="f7I-ge-YNy" secondAttribute="bottom" constant="91" id="PeA-Ac-7cu"/>
                                     <constraint firstAttribute="bottom" secondItem="w0x-e5-ocS" secondAttribute="bottom" constant="97" id="Qjl-dm-yrZ"/>
                                     <constraint firstAttribute="trailing" secondItem="f7I-ge-YNy" secondAttribute="trailing" constant="4" id="WCy-t4-s2v"/>
-                                    <constraint firstItem="w0x-e5-ocS" firstAttribute="leading" secondItem="BFl-VH-PD8" secondAttribute="leading" constant="32" id="YDQ-MT-BTI"/>
-                                    <constraint firstItem="w0x-e5-ocS" firstAttribute="leading" secondItem="85B-ve-Top" secondAttribute="trailing" id="ZiZ-BW-de1"/>
-                                    <constraint firstAttribute="trailing" secondItem="f7I-ge-YNy" secondAttribute="trailing" constant="130" id="dVD-lk-3OF"/>
-                                    <constraint firstItem="f7I-ge-YNy" firstAttribute="leading" secondItem="w0x-e5-ocS" secondAttribute="trailing" constant="-169" id="gjC-bF-fxj"/>
-                                    <constraint firstAttribute="trailing" secondItem="1FH-kv-dGW" secondAttribute="trailing" constant="24" id="hld-zc-PLb"/>
+                                    <constraint firstItem="w0x-e5-ocS" firstAttribute="leading" secondItem="BFl-VH-PD8" secondAttribute="leading" constant="30" id="YDQ-MT-BTI"/>
+                                    <constraint firstItem="w0x-e5-ocS" firstAttribute="leading" secondItem="85B-ve-Top" secondAttribute="trailing" constant="1" id="ZiZ-BW-de1"/>
+                                    <constraint firstAttribute="trailing" secondItem="f7I-ge-YNy" secondAttribute="trailing" constant="-11" id="dVD-lk-3OF"/>
+                                    <constraint firstItem="f7I-ge-YNy" firstAttribute="leading" secondItem="w0x-e5-ocS" secondAttribute="trailing" constant="-11" id="gjC-bF-fxj"/>
+                                    <constraint firstAttribute="trailing" secondItem="1FH-kv-dGW" secondAttribute="trailing" constant="26" id="hld-zc-PLb"/>
                                     <constraint firstItem="1FH-kv-dGW" firstAttribute="top" secondItem="85B-ve-Top" secondAttribute="bottom" constant="1" id="iNI-3H-ALk"/>
                                     <constraint firstAttribute="bottom" secondItem="1FH-kv-dGW" secondAttribute="bottom" constant="97" id="iOK-yn-Awq"/>
-                                    <constraint firstItem="f7I-ge-YNy" firstAttribute="leading" secondItem="w0x-e5-ocS" secondAttribute="trailing" constant="-169" id="lDS-0e-rkv"/>
+                                    <constraint firstItem="f7I-ge-YNy" firstAttribute="leading" secondItem="w0x-e5-ocS" secondAttribute="trailing" constant="-11" id="lDS-0e-rkv"/>
                                     <constraint firstAttribute="trailing" secondItem="f7I-ge-YNy" secondAttribute="trailing" constant="8" id="ola-0C-5Ja"/>
-                                    <constraint firstItem="1FH-kv-dGW" firstAttribute="leading" secondItem="BFl-VH-PD8" secondAttribute="leading" constant="18" id="uIz-2W-sHo"/>
+                                    <constraint firstItem="1FH-kv-dGW" firstAttribute="leading" secondItem="BFl-VH-PD8" secondAttribute="leading" constant="15" id="uIz-2W-sHo"/>
                                     <constraint firstItem="NvZ-jN-SUK" firstAttribute="leading" secondItem="BFl-VH-PD8" secondAttribute="leading" constant="21" id="y8d-yv-dtI"/>
                                 </constraints>
                                 <variation key="default">
@@ -2980,11 +2980,11 @@
         <image name="createticket2" width="24" height="24"/>
         <image name="default_pic" width="96" height="96"/>
         <image name="email" width="16" height="16"/>
+        <image name="ic_forward" width="24" height="24"/>
         <image name="inbox2" width="24" height="24"/>
         <image name="list2" width="24" height="24"/>
         <image name="logout2" width="24" height="24"/>
         <image name="mytickets2" width="24" height="24"/>
-        <image name="next1" width="512" height="512"/>
         <image name="phone" width="16" height="16"/>
         <image name="pro" width="410" height="218"/>
         <image name="settings" width="32" height="32"/>
