--- a/Faveo Helpdesk Pro/Base.lproj/Main.storyboard
+++ b/Faveo Helpdesk Pro/Base.lproj/Main.storyboard
@@ -566,7 +566,7 @@
                                         <rect key="frame" x="0.0" y="640" width="256" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="q8J-eL-E3L" id="ofk-F3-wLf">
-                                            <rect key="frame" x="0.0" y="0.0" width="256" height="44"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="256" height="43.666666666666664"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fbr-Fi-GB8">
@@ -1197,18 +1197,18 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="55" id="Wkr-cU-vrz">
-                                        <rect key="frame" x="0.0" y="330" width="414" height="55"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="70" id="Wkr-cU-vrz">
+                                        <rect key="frame" x="0.0" y="330" width="414" height="70"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Wkr-cU-vrz" id="yv2-FO-tTA">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="55"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="70"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FrH-RK-9iC">
-                                                    <rect key="frame" x="8" y="0.0" width="398" height="54.666666666666664"/>
+                                                    <rect key="frame" x="8" y="0.0" width="398" height="70"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Message*" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KL7-aF-noB">
-                                                            <rect key="frame" x="8" y="5" width="109" height="14.666666666666668"/>
+                                                            <rect key="frame" x="8" y="5" width="109" height="15"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="109" id="dH6-hL-NbL"/>
                                                             </constraints>
@@ -1217,7 +1217,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3C4-Ui-2G3">
-                                                            <rect key="frame" x="8" y="53.666666666666664" width="382" height="1"/>
+                                                            <rect key="frame" x="8" y="69" width="382" height="1"/>
                                                             <color key="backgroundColor" red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="1" id="9A9-yp-GgI"/>
@@ -1235,29 +1235,26 @@
                                                     </constraints>
                                                 </view>
                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="LfU-pY-XP0">
-                                                    <rect key="frame" x="16" y="20" width="383" height="34"/>
+                                                    <rect key="frame" x="16" y="20" width="383" height="47"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="34" id="VU7-qn-nHI"/>
-                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="next"/>
+                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="no" spellCheckingType="no" returnKeyType="next"/>
                                                 </textView>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="bottom" secondItem="FrH-RK-9iC" secondAttribute="bottom" id="21i-XW-lIm"/>
                                                 <constraint firstItem="FrH-RK-9iC" firstAttribute="top" secondItem="yv2-FO-tTA" secondAttribute="top" id="APd-W2-cfj"/>
-                                                <constraint firstItem="LfU-pY-XP0" firstAttribute="top" secondItem="yv2-FO-tTA" secondAttribute="top" constant="20" id="WrA-90-CYI"/>
-                                                <constraint firstAttribute="bottom" secondItem="LfU-pY-XP0" secondAttribute="bottom" constant="1" id="Y8y-UK-NDe"/>
+                                                <constraint firstItem="LfU-pY-XP0" firstAttribute="top" secondItem="yv2-FO-tTA" secondAttribute="topMargin" constant="12" id="RFx-tQ-t5W"/>
+                                                <constraint firstItem="LfU-pY-XP0" firstAttribute="leading" secondItem="yv2-FO-tTA" secondAttribute="leadingMargin" constant="8" id="RdS-dO-2Cf"/>
                                                 <constraint firstItem="FrH-RK-9iC" firstAttribute="leading" secondItem="yv2-FO-tTA" secondAttribute="leadingMargin" id="Ybm-xQ-q0P"/>
-                                                <constraint firstItem="LfU-pY-XP0" firstAttribute="leading" secondItem="yv2-FO-tTA" secondAttribute="leadingMargin" constant="8" id="ZKg-hS-2L8"/>
                                                 <constraint firstItem="FrH-RK-9iC" firstAttribute="trailing" secondItem="yv2-FO-tTA" secondAttribute="trailingMargin" id="g4Y-Iq-gU1"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="LfU-pY-XP0" secondAttribute="trailing" constant="7" id="kQA-H5-Ka9"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="LfU-pY-XP0" secondAttribute="bottom" constant="-5" id="jsx-pI-WAb"/>
+                                                <constraint firstItem="LfU-pY-XP0" firstAttribute="centerX" secondItem="FrH-RK-9iC" secondAttribute="centerX" id="mWY-Cg-mYy"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="55" id="0ML-g8-7I6">
-                                        <rect key="frame" x="0.0" y="385" width="414" height="55"/>
+                                        <rect key="frame" x="0.0" y="400" width="414" height="55"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="0ML-g8-7I6" id="2o4-up-AbH">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="55"/>
@@ -1318,7 +1315,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="90" id="hzd-xa-Jvv">
-                                        <rect key="frame" x="0.0" y="440" width="414" height="90"/>
+                                        <rect key="frame" x="0.0" y="455" width="414" height="90"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="hzd-xa-Jvv" id="g2B-Nd-Bkj">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="90"/>
@@ -1360,8 +1357,6 @@
                             <outlet property="delegate" destination="Le1-ZY-MtZ" id="J8Y-pz-sje"/>
                         </connections>
                     </tableView>
-                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-                    <size key="freeformSize" width="414" height="736"/>
                     <connections>
                         <outlet property="codeTextField" destination="ist-CM-MqC" id="7sv-DZ-hLR"/>
                         <outlet property="emailTextField" destination="wP3-2d-9CT" id="Jug-Za-QeT"/>
@@ -1407,8 +1402,8 @@
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cgk-NJ-hrK">
                                 <rect key="frame" x="0.0" y="93" width="414" height="635"/>
                             </containerView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ACZN-2015-0002015" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PyQ-uW-FL5">
-                                <rect key="frame" x="0.0" y="35" width="131" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ACZN-2015-0002015" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PyQ-uW-FL5">
+                                <rect key="frame" x="11" y="35" width="131" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="dfa-uR-vM1"/>
                                     <constraint firstAttribute="width" constant="131" id="miJ-wN-6Fa"/>
@@ -1431,9 +1426,9 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ClientName" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uyc-xp-Avp">
-                                <rect key="frame" x="146" y="34" width="135" height="21"/>
+                                <rect key="frame" x="146" y="34" width="147" height="21"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="135" id="GeP-Xi-poF"/>
+                                    <constraint firstAttribute="width" constant="147" id="GeP-Xi-poF"/>
                                     <constraint firstAttribute="height" constant="21" id="ctj-eN-Me1"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="13"/>
@@ -1447,15 +1442,15 @@
                             <constraint firstItem="cgk-NJ-hrK" firstAttribute="leading" secondItem="SYU-Ew-rzk" secondAttribute="leading" id="8WP-FS-gei"/>
                             <constraint firstItem="3ky-ZN-q0e" firstAttribute="top" secondItem="cgk-NJ-hrK" secondAttribute="bottom" constant="8" id="9BZ-iz-eBX"/>
                             <constraint firstItem="cgk-NJ-hrK" firstAttribute="top" secondItem="GzN-Yn-vAw" secondAttribute="bottom" constant="1" id="9cK-h2-ynN"/>
-                            <constraint firstItem="ov5-ne-izY" firstAttribute="leading" secondItem="Uyc-xp-Avp" secondAttribute="trailing" constant="20" id="HaU-Bc-7Rx"/>
+                            <constraint firstItem="ov5-ne-izY" firstAttribute="leading" secondItem="Uyc-xp-Avp" secondAttribute="trailing" constant="8" id="HaU-Bc-7Rx"/>
                             <constraint firstAttribute="trailingMargin" secondItem="ov5-ne-izY" secondAttribute="trailing" constant="-15" id="Py7-zv-p9g"/>
                             <constraint firstAttribute="trailing" secondItem="cgk-NJ-hrK" secondAttribute="trailing" id="V73-xk-cY6"/>
                             <constraint firstAttribute="trailing" secondItem="GzN-Yn-vAw" secondAttribute="trailing" id="Weg-6L-gAN"/>
                             <constraint firstItem="ov5-ne-izY" firstAttribute="baseline" secondItem="PyQ-uW-FL5" secondAttribute="baseline" id="Wu1-sg-Fmm"/>
                             <constraint firstItem="ov5-ne-izY" firstAttribute="centerY" secondItem="PyQ-uW-FL5" secondAttribute="centerY" id="X2t-PG-drX"/>
                             <constraint firstItem="GzN-Yn-vAw" firstAttribute="top" secondItem="Uyc-xp-Avp" secondAttribute="bottom" constant="7" id="Yb8-cY-7qg"/>
-                            <constraint firstItem="PyQ-uW-FL5" firstAttribute="leading" secondItem="SYU-Ew-rzk" secondAttribute="leadingMargin" constant="-20" id="k7N-hx-nmM"/>
-                            <constraint firstItem="Uyc-xp-Avp" firstAttribute="centerX" secondItem="SYU-Ew-rzk" secondAttribute="centerX" constant="6.5" id="lt8-RE-rgL"/>
+                            <constraint firstItem="PyQ-uW-FL5" firstAttribute="leading" secondItem="SYU-Ew-rzk" secondAttribute="leadingMargin" constant="-9" id="k7N-hx-nmM"/>
+                            <constraint firstItem="Uyc-xp-Avp" firstAttribute="centerX" secondItem="SYU-Ew-rzk" secondAttribute="centerX" constant="12.5" id="lt8-RE-rgL"/>
                             <constraint firstItem="GzN-Yn-vAw" firstAttribute="leading" secondItem="SYU-Ew-rzk" secondAttribute="leading" id="sx1-9H-0TF"/>
                             <constraint firstItem="Uyc-xp-Avp" firstAttribute="top" secondItem="t9C-dd-W0m" secondAttribute="bottom" constant="14" id="vHw-Jt-06t"/>
                         </constraints>
